[project]
name = "ai-tools-show"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "httpx[http2]==0.27.0",
    "itsdangerous>=2.2.0",
    "langfuse>=2.60.1",
    "openai>=1.68.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
